--- a/patient-otp-service/src/main/java/com/stackroute/SendOTP.html
+++ b/patient-otp-service/src/main/java/com/stackroute/SendOTP.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1> Hi </h1>
+<h1> Hi {{user}}</h1>
 <br/>
 <h2> Your Otp Number is {{otpnum}}</h2>
 <br/>
